--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,8 @@ nav h3:hover , footer h3:hover{
   width: 100%;
   height: 100vh;
   overflow: hidden;
-  background: #e7e7e7;
+/*  background: #e7e7e7;*/
+  background: #fafafa;
 	z-index: 0;
 }
 
@@ -347,8 +348,9 @@ nav h3:hover , footer h3:hover{
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-attachment: fixed;
-  -webkit-transition: margin 0.8s;
-  transition: margin 0.8s;
+  -webkit-  transition: margin 1s  cubic-bezier(0, 0.5, 0.15, 1);
+  transition: margin 1s  cubic-bezier(0.7, 0.18, 0.15, 1);
+;
   will-change: margin;
 }
 
