--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,13 @@
           box-sizing: border-box;
   margin: 0;
   padding: 0;
+	-webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
 }
 
 html, body {
@@ -21,7 +28,6 @@ nav{
 	right: 0;
 	margin: auto;
 	margin-top: 3%;
-	
 }
 
 footer{
@@ -47,6 +53,10 @@ footer{
 
 .menu,.sidebar-hover{
     right: 0px;
+}
+
+.menu:first-child{
+	
 }
 
 .foot,.sidebar-hover{
@@ -496,14 +506,66 @@ margin-top: 2em;
   transform: scale(0.8);
 }
 
-.container{
-    width:100%;
-    height:100%;   
-    position:absolute;
-    top:0;
-    left:0;
-    overflow:hidden;
-	z-index: 2;
+/* 				CASE STUDIES				*/
+
+.case{
+	 overflow-y:scroll;
+	 width:100%;
+	 height: 100%;
+}
+
+.header{
+	width: 60%;
+	height: 40%;
+	left: 0;
+	right: 0;
+	margin: auto;
+	margin-top: 20%;
 }
 
 
+.case-title{
+  font-size: 6rem;
+  line-height: 1;
+  font-weight:600;
+}
+
+.description{
+	width: 56%;
+	font-size: 1.6rem;
+  	margin-top: 3%;
+	line-height: 1.875;
+}
+
+.category{
+  font-size: 1.3rem;
+  font-weight:700;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  margin-top: 3%;	
+}
+
+ .container{
+	width: 80%;
+	left: 0;
+	right: 0;
+	margin: auto;
+ }
+
+.media img{
+	width: 100%;
+}
+
+.text-block{
+	width: 60%;
+	left: 0;
+	right: 0;
+	margin: auto;
+}
+
+.text-block .description{
+	width: 90%;
+	font-size: 1.6rem;
+  	margin-top: 3%;
+	line-height: 1.875;
+}
