--- a/css/style.css
+++ b/css/style.css
@@ -489,6 +489,7 @@ margin-top: 2em;
   border:0.5px solid #1e1e1e;
   opacity: 0.4;
   pointer-events: none;
+  mix-blend-mode: multiply;
   -webkit-transition:transform 0.5s cubic-bezier(.31,.99,.57,1);
 }
 
