--- a/css/style.css
+++ b/css/style.css
@@ -537,6 +537,13 @@ svg {
 	margin-top: 20%;
 }
 
+.footer{
+    background-color: black;
+    width: 100%;
+	height: 40%;
+    color: white;
+}
+
 
 .case-title{
   font-size: 6rem;
