--- a/css/style.css
+++ b/css/style.css
@@ -540,8 +540,9 @@ svg {
 .footer{
     background-color: black;
     width: 100%;
-	height: 40%;
+	height: 60%;
     color: white;
+	position: relative;
 }
 
 
@@ -567,14 +568,14 @@ svg {
 }
 
  .container{
-	width: 80%;
+	width: 60%;
 	left: 0;
 	right: 0;
-	margin: auto;
+	margin: 10% auto;
  }
 
 .media{
-	margin:10% 10%;
+	margin:10% 0 10%;
 }
 
 .media img{
@@ -589,7 +590,6 @@ svg {
 	width: 60%;
 	left: 0;
 	right: 0;
-	margin: 10% auto;
 }
 
 .text-block .description{
@@ -607,7 +607,6 @@ svg {
 
 .divider img{
 	width: 100%;
-    
 	overflow: hidden;
 }
 
@@ -637,6 +636,29 @@ svg {
 	transform: translate3d(1.05,0,0);
 }
 
+.footer .container{
+	width: 10%;
+	
+}
+
+.next, .title{
+	position: absolute;
+	width: auto;
+	color: white;
+	-webkit-transition: all 0.3s ease;
+	margin-top: 15%;
+}
+
+.title{
+	margin-top: 20%;
+}
 
 
+.next:hover {
+  -webkit-text-stroke: 1.2px white;
+	text-stroke: 1.2px white;
+	 -webkit-transition: all 0.3s ease;
+    color: rgb(0,0,0,0);
+	cursor: pointer;
+}
 
