--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,15 @@ nav h3:hover , footer h3:hover{
 	z-index: 0;
 }
 
+.case-main {
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+/*  background: #e7e7e7;*/
+  background: #fafafa;
+	z-index: 0;
+}
+
 
 .sidebar-real,
 .left-part,
