--- a/css/style.css
+++ b/css/style.css
@@ -561,8 +561,8 @@ svg {
   font-weight:600;
 }
 
-.description{
-	width: 56%;
+.description-begin{
+	width: 60%;
 	font-size: 1.6rem;
   	margin-top: 3%;
 	line-height: 1.875;
@@ -595,17 +595,31 @@ svg {
 	width: 100%;
 }
 
-.text-block{
-	width: 60%;
+.text-container{
+	width: 100%;
 	left: 0;
 	right: 0;
 }
 
+.text-block{
+    vertical-align: top;
+	display: inline-block;
+	width: 45%;
+}
+
 .text-block .description{
-	width: 90%;
+	width: 100%;
 	font-size: 1.6rem;
-  	margin-top: 3%;
 	line-height: 1.875;
+}
+
+.text-block .text-title{
+	width: 100%;
+    text-transform: uppercase;
+	font-size: 1.3rem;
+	font-weight: bold;
+	line-height: 1.875;
+	letter-spacing: 1px;
 }
 
 .divider{
