--- a/css/style.css
+++ b/css/style.css
@@ -482,10 +482,46 @@ margin-top: 2em;
 
 
 .bg-part {
-  width: 70%;
+  width: 12.5%;
   height:70%;
-	margin-left: 15%;
-	overflow: hidden;
+  margin-left: 15%;
+  overflow: hidden;
+}
+
+.bg-part:nth-child(4) {
+  -webkit-transition-delay: 0.4s;
+          transition-delay: 0.4s;
+}
+.bg-part:nth-child(3), .bg-part:nth-child(5) {
+  -webkit-transition-delay: 0.6s;
+          transition-delay: 0.6s;
+}
+.bg-part:nth-child(2), .bg-part:nth-child(6) {
+  -webkit-transition-delay: 0.8s;
+          transition-delay: 0.8s;
+}
+.bg-part:nth-child(1), .bg-part:nth-child(7) {
+  -webkit-transition-delay: 1s;
+          transition-delay: 1s;
+}
+.bg-part:nth-child(5) {
+  -webkit-transition-delay: 0.2s;
+          transition-delay: 0.2s;
+}
+.bg-part:nth-child(1) {
+  left: 0%;
+}
+.bg-part:nth-child(2) {
+  left: 12.5%;
+}
+.bg-part:nth-child(3) {
+  left: 25%;
+}
+.bg-part:nth-child(4) {
+  left: 37.5%;
+}
+.bg-part:nth-child(5) {
+  left: 50%;
 }
 
 
