--- a/css/style.css
+++ b/css/style.css
@@ -350,7 +350,7 @@ nav h3:hover , footer h3:hover{
 }
 
 .section.section-2 .bg-part {
-  background-image: url("../imgs/cali_port.jpg");
+  background-image: url("../imgs/clothe_gold.jpg");
 
 }
 
