--- a/css/style.css
+++ b/css/style.css
@@ -355,12 +355,11 @@ nav h3:hover , footer h3:hover{
 }
 
 .section.section-3 .bg-part {
-   background-image: url("../imgs/menu-rest.png");
-
+   background-image: url("../imgs/mil.png");
 }
 
 .section.section-4 .bg-part {
-  background-image: url("../imgs/cali_port.jpg");
+  background-image: url("../imgs/puerto.jpg");
 }
 
 /*
@@ -386,7 +385,6 @@ nav h3:hover , footer h3:hover{
   margin-top:13vh; 
     background-size: cover;
   background-repeat: no-repeat;
-  background-position: 50% 50%;
   background-attachment: fixed;
   -webkit-transition: margin 1s  cubic-bezier(0, 0.5, 0.15, 1);
   transition: margin 1s  cubic-bezier(0.7, 0.18, 0.15, 1);
@@ -415,7 +413,7 @@ nav h3:hover , footer h3:hover{
 	z-index: 2;
 	position:relative;
 	top: 33rem;
-  	left: 0;
+  	left: 35%;
 	margin: 0 auto;
 	width: 1200px;
 	height: 100px;
@@ -426,7 +424,7 @@ nav h3:hover , footer h3:hover{
 	z-index: 2;
 	top: 44rem;
 	margin: 0 auto;
-	left: 20%;
+	left: 85%;
 	position:absolute;
 	height: 20px;
   	overflow: hidden;
@@ -439,7 +437,7 @@ nav h3:hover , footer h3:hover{
   top: 45rem;
   opacity: 1;
   width: 10%;
-  right: 81%;
+  right: 17%;
   height: 1.5px;
   background-color: black;
   -webkit-transition: all 0.4s ease;
@@ -512,7 +510,7 @@ margin-top: 2em;
 .bg-part {
   width: 12.5%;
   height:70%;
-  margin-left: 20%;
+  margin-left: 15%;
   overflow: hidden;
 }
 
