--- a/css/style.css
+++ b/css/style.css
@@ -614,7 +614,7 @@ svg {
 
 .header{
 	width: 85%;
-	height: 40%;
+	height: 45%;
 	left: 0;
 	right: 0;
 	margin: auto;
@@ -640,18 +640,34 @@ svg {
 }
 
 .description-begin{
-	width: 60%;
-	font-size: 1.6rem;
-  	margin-top: 3%;
+	font-size: 1.5rem;
+  	margin-top: 8%;
 	line-height: 1.875;
 }
 
 .category{
-  font-size: 1.3rem;
+  font-size: 1.1rem;
   font-weight:700;
+  width: 20%;
   letter-spacing: 3px;
   text-transform: uppercase;
-  margin-top: 3%;	
+}
+
+.textcont{
+  margin-top: 6%;	
+  width: 100%;
+}
+
+.text-block-case{
+	width: 40%;
+	display: inline-block;
+	vertical-align: top; /* here */
+}
+.text-block-role{
+	vertical-align: top; /* here */
+	margin-left: 9%;
+	width: 20%;
+	display: inline-block;
 }
 
  .container{
