--- a/css/style.css
+++ b/css/style.css
@@ -671,17 +671,18 @@ svg {
 .description-begin{
 	height: auto;
 	width: auto;
-	font-size: 1.6rem;
+	font-size: 1.7rem;
  	vertical-align: top; 
 	line-height: 1.875;
 }
 
 .category{
-	margin-bottom: 3%;
-  font-size: 1.1rem;
+  margin-top: 3%;
+	margin-bottom: 5%;
+  font-size: 1.2rem;
   font-weight:700;
   width: 100%;
-  letter-spacing: 3px;
+  letter-spacing: 2.5px;
   text-transform: uppercase;
 }
 
