--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ nav h3, footer h3{
                                   supported by Chrome and Opera */
 	font-family: "Avenir Next";
 	font-weight: 300;
-	font-size: 16px;
+ 	font-size:1.1vw;
 	opacity: 0.4;
     height: 50%;
 	-webkit-transition: all 0.5s ease;
@@ -663,7 +663,7 @@ svg {
 }
 
 .case-title{
-  font-size: 6rem;
+  font-size: 8rem;
   font-weight:600;
   line-height: 1.25;
 }
