--- a/css/style.css
+++ b/css/style.css
@@ -333,7 +333,7 @@ nav h3:hover , footer h3:hover{
 /* REAL SIDEBAR STYLES END */
 /* SECTIONS STYLES */
 .sections {
-	z-index: 1;
+  z-index: 1;
   height: 100%;
   -webkit-transition: margin 0.5s;
   transition: margin 0.5s;
@@ -355,7 +355,7 @@ nav h3:hover , footer h3:hover{
 }
 
 .section.section-3 .bg-part {
-   background-image: url("../imgs/mil.png");
+   background-image: url("../imgs/cards2.png");
 }
 
 .section.section-4 .bg-part {
@@ -363,19 +363,23 @@ nav h3:hover , footer h3:hover{
 }
 
 .section.section-1 .color {
-  background-color: #b58b6d;
+  background-color: #ffa6a6;
+  background-image: url("../imgs/bg-project-1.png");
 }
 
 .section.section-2 .color {
-  background-color: #6db2aa;
+  background-color: #a6eeff;
+  background-image: url("../imgs/bg-project-3.png");
 }
 
 .section.section-3 .color {
-  background-color: #a26daf;
+  background-color: #ffc9a4;
+  background-image: url("../imgs/cards.png");
 }
 
 .section.section-4 .color {
-  background-color: #6d71af;
+  background-color: #cba6ff;
+  background-image: url("../imgs/bg-project-4.png");
 }
 
 /*
@@ -397,7 +401,8 @@ nav h3:hover , footer h3:hover{
 */
 
 .left-part,
-.bg-part {
+.bg-part,
+.color {
   margin-top:13vh; 
   background-size: 100%;
   background-repeat: no-repeat;
@@ -430,7 +435,7 @@ nav h3:hover , footer h3:hover{
 	position:relative;
 	top: 43rem;
 	margin: 0 auto;
-	width: 800px;
+	width: 900px;
 	height: 100px;
 	overflow: hidden;
 }
@@ -524,11 +529,11 @@ margin-top: 0.5em;
 margin-top: 2em;
 }
 
-.color{
-	z-index: -1;
-   width: 40%;
+.color{	
+  z-index: -1;
+  width: 40%;
   height:100%;
-	-webkit-transition: margin 1s  cubic-bezier(0, 0.5, 0.15, 1);
+  -webkit-transition: margin 1s  cubic-bezier(0, 0.5, 0.15, 1);
   transition: margin 1s  cubic-bezier(0.7, 0.18, 0.15, 1);
   will-change: margin;
  }
