--- a/css/style.css
+++ b/css/style.css
@@ -407,8 +407,8 @@ nav h3:hover , footer h3:hover{
   background-size: 100%;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  -webkit-transition: margin 1s  cubic-bezier(0, 0.5, 0.15, 1);
-  transition: margin 1s  cubic-bezier(0.7, 0.18, 0.15, 1);
+  -webkit-transition: margin 1.3s cubic-bezier(.68,.01,.33,.99);
+  transition: margin 1.3s  cubic-bezier(.68,.01,.33,.99);
   will-change: margin;
 }
 
@@ -533,61 +533,127 @@ margin-top: 2em;
   z-index: -1;
   width: 40%;
   height:100%;
-  -webkit-transition: margin 1s  cubic-bezier(0, 0.5, 0.15, 1);
+  -webkit-transition: margin 1s  cubic-bezier(0.7, 0.18, 0.15, 1);
   transition: margin 1s  cubic-bezier(0.7, 0.18, 0.15, 1);
   will-change: margin;
  }
 
 .bg-part {
-  width: 12.5%;
+  width: 3%;
   height:70%;
   margin-left: 15%;
   overflow: hidden;
 }
 
+.bg-part:nth-child(1) {
+  -webkit-transition-delay: 0.01s;
+          transition-delay: 0.01s;
+}
+
+.bg-part:nth-child(2) {
+  -webkit-transition-delay: 0.015s;
+          transition-delay: 0.015s;
+}
+
+.bg-part:nth-child(3) {
+  -webkit-transition-delay: 0.02s;
+          transition-delay: 0.02s;
+}
+
 .bg-part:nth-child(4) {
-  -webkit-transition-delay: 0.4s;
-          transition-delay: 0.4s;
+  -webkit-transition-delay: 0.025s;
+          transition-delay: 0.025s;
 }
-.bg-part:nth-child(3), .bg-part:nth-child(5) {
-  -webkit-transition-delay: 0.6s;
-          transition-delay: 0.6s;
-}
-.bg-part:nth-child(2), .bg-part:nth-child(6) {
-  -webkit-transition-delay: 0.8s;
-          transition-delay: 0.8s;
-}
-.bg-part:nth-child(1), .bg-part:nth-child(7) {
-  -webkit-transition-delay: 1s;
-          transition-delay: 1s;
-}
+
 .bg-part:nth-child(5) {
-  -webkit-transition-delay: 0.2s;
-          transition-delay: 0.2s;
+  -webkit-transition-delay: 0.03s;
+          transition-delay: 0.03s;
 }
+.bg-part:nth-child(6) {
+  -webkit-transition-delay: 0.035s;
+          transition-delay: 0.035s;
+}
+.bg-part:nth-child(7) {
+  -webkit-transition-delay: 0.04s;
+          transition-delay: 0.04s;
+}
+.bg-part:nth-child(8) {
+  -webkit-transition-delay: 0.04s;
+          transition-delay: 0.04s;
+}
+.bg-part:nth-child(9) {
+  -webkit-transition-delay: 0.045s;
+          transition-delay: 0.045s;
+}
+.bg-part:nth-child(10) {
+  -webkit-transition-delay: 0.05s;
+          transition-delay: 0.05s;
+}
+.bg-part:nth-child(11) {
+  -webkit-transition-delay: 0.055s;
+          transition-delay: 0.055s;
+}
+.bg-part:nth-child(12) {
+  -webkit-transition-delay: 0.06s;
+          transition-delay: 0.06s;
+}
+.bg-part:nth-child(13) {
+  -webkit-transition-delay: 0.07s;
+          transition-delay: 0.07s;
+}
+.bg-part:nth-child(14) {
+  -webkit-transition-delay: 0.075s;
+          transition-delay: 0.075s;
+}
+.bg-part:nth-child(15) {
+  -webkit-transition-delay: 0.08s;
+          transition-delay: 0.08s;
+}
+
 .bg-part:nth-child(1) {
   left: 0%;
 }
 .bg-part:nth-child(2) {
-  left: 12.5%;
+  left: 3%;
 }
 .bg-part:nth-child(3) {
-  left: 25%;
+  left: 6%;
 }
 .bg-part:nth-child(4) {
-  left: 37.5%;
+  left: 9%;
 }
 .bg-part:nth-child(5) {
-  left: 50%;
+  left: 12%;
 }
 .bg-part:nth-child(6) {
-  left: 62.5%;
+  left: 15%;
 }
 .bg-part:nth-child(7) {
-  left: 75%;
+  left: 18%;
 }
 .bg-part:nth-child(8) {
-  left: 87.5%;
+  left: 21%;
+}
+.bg-part:nth-child(9) {
+  left: 24%;
+}
+.bg-part:nth-child(10) {
+  left: 27%;
+}
+.bg-part:nth-child(11) {
+  left: 30%;
+}
+.bg-part:nth-child(12) {
+  left: 33%;
+}
+.bg-part:nth-child(13) {
+  left: 36%;
+}
+.bg-part:nth-child(14) {
+  left: 39%;
+}
+.bg-part:nth-child(15) {
+  left: 42%;
 }
 
 
