--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ nav h3, footer h3{
                                   supported by Chrome and Opera */
 	font-family: "Avenir Next";
 	font-weight: 300;
- 	font-size:1.1vw;
+ 	font-size:1vw;
 	opacity: 0.4;
     height: 50%;
 	-webkit-transition: all 0.5s ease;
@@ -407,8 +407,8 @@ nav h3:hover , footer h3:hover{
   background-size: 100%;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  -webkit-transition: margin 1s cubic-bezier(.68,.01,.33,.99);
-  transition: margin 1s  cubic-bezier(.68,.01,.33,.99);
+  -webkit-transition: margin 1.3s cubic-bezier(.68,.01,.33,.99);
+  transition: margin 1.3s  cubic-bezier(.68,.01,.33,.99);
   will-change: margin;
 }
 
@@ -433,7 +433,7 @@ nav h3:hover , footer h3:hover{
 .box{
 	z-index: 2;
 	position:relative;
-	top: 43rem;
+	top: 60%;
 	margin: 0 auto;
 	width: 900px;
 	height: 100px;
@@ -442,7 +442,7 @@ nav h3:hover , footer h3:hover{
 
 .texts{
 	z-index: 2;
-	top: 55rem;
+	top: 75%;
 	margin: 0 auto;
 	left: 70%;
 	position:absolute;
@@ -454,15 +454,14 @@ nav h3:hover , footer h3:hover{
 .linea{
   z-index: 5;
   position: absolute;
-  top: 56.1rem;
+  top: 76.5%;
   opacity: 1;
-  width: 6%;
+  width: 8%;
   right: 33%;
   height: 1.3px;
   background-color: black;
-  	-webkit-transition: all 0.5s cubic-bezier(0.7, 0.18, 0.15, 1);
-  will-change: transform, opacity;
-  border: none; /*on supprime le style par défaut*/
+  	-webkit-transition: all 0.6s cubic-bezier(0.7, 0.18, 0.15, 1);
+   border: none; /*on supprime le style par défaut*/
 }
 
 .section-heading,
@@ -484,11 +483,18 @@ nav h3:hover , footer h3:hover{
 }
 
 .section-heading.not-visible,
-.additional-text.not-visible,
-.linea.not-visible{
+.additional-text.not-visible{
   -webkit-transform: translateY(10rem);
           transform: translateY(10rem);
+  -webkit-transition: all 1.3s cubic-bezier(0.7, 0.18, 0.15, 1);
   transition: all 1.3s cubic-bezier(0.7, 0.18, 0.15, 1);
+}
+
+.linea.not-visible{
+	  width: 0%;
+	  -webkit-transition: all 0.4s cubic-bezier(0.7, 0.18, 0.15, 1);
+	  transition: all 0.4s cubic-bezier(0.7, 0.18, 0.15, 1);
+	  
 }
 
 .section-heading {
@@ -498,13 +504,12 @@ nav h3:hover , footer h3:hover{
   font-weight:600;
   -webkit-text-stroke: 1.2px #141414;
   text-stroke: 1.2px #141414;
-  transition: all 0.4s cubic-bezier(0.7, 0.18, 0.15, 1);
-}
+ }
 
 .section-heading:hover{
   -webkit-text-stroke: 1.2px #141414;
 	text-stroke: 1.2px #141414;
-  transition: all 0.4s cubic-bezier(0.7, 0.18, 0.15, 1);
+  transition: all 0.5s cubic-bezier(0.7, 0.18, 0.15, 1);
     color: rgb(0,0,0,0);
 	cursor: pointer;
 }
@@ -518,15 +523,16 @@ nav h3:hover , footer h3:hover{
     letter-spacing: 3px;
     text-transform: uppercase;
 	opacity: 1;
-	transition: all 0.4s cubic-bezier(0.7, 0.18, 0.15, 1);
-}
+ }
 
 .up{
-margin-top: 0.5em;
+	margin-top: 0.5em;
+	transition: all 0.8s cubic-bezier(0.7, 0.18, 0.15, 1);
 }
 
 .down{
-margin-top: 2em;
+	  margin-top: 2em;
+	  transition: all 0.8s cubic-bezier(0.7, 0.18, 0.15, 1);
 }
 
 .color{	
