--- a/css/style.css
+++ b/css/style.css
@@ -676,8 +676,8 @@ nav h3:hover , footer h3:hover{
 #follower{
   z-index: 3;
   position: absolute;
-  width:45px;
-  height:45px;
+  width:50px;
+  height:50px;
   border-radius:50px;
   border:1px solid black;
   opacity: 0.4;
@@ -765,12 +765,13 @@ svg {
 
 .category{
   margin-top: 3%;
-	margin-bottom: 5%;
+  margin-bottom: 5%;
   font-size: 1.2rem;
   font-weight:700;
   width: 100%;
   letter-spacing: 2.5px;
   text-transform: uppercase;
+  display: inline-block;
 }
 
 .textcont{
@@ -843,7 +844,7 @@ svg {
 .divider{
 	width: 100%;
 	overflow: hidden;
-    height: 90%;
+    height: 65%;
 }
 
 .divider img{
