--- a/css/style.css
+++ b/css/style.css
@@ -763,6 +763,21 @@ svg {
 	line-height: 1.875;
 }
 
+.description-about{
+	height: auto;
+	font-size: 1.3rem;
+ 	vertical-align: top; 
+	line-height: 1.875;
+}
+
+.contact{
+	height: auto;
+	font-size: 2.3rem;
+	font-weight: 600;
+ 	vertical-align: top; 
+	line-height: 1.875;
+}
+
 .category{
   margin-top: 3%;
   margin-bottom: 5%;
@@ -922,7 +937,7 @@ svg {
 }
 
 .about{
-	margin-left: 50%;
+	margin-left: 40%;
 }
 
 .photo{
