--- a/css/style.css
+++ b/css/style.css
@@ -450,6 +450,32 @@ nav h3:hover , footer h3:hover{
 	overflow: hidden;
 }
 
+.box-list{
+	z-index: 2;
+	position:absolute;
+	top: 60%;
+	margin: 0 auto;
+	width: 900px;
+	height: 100px;
+	overflow: hidden;
+}
+
+#scroller{
+  top: 0px;
+  position:absolute;
+  right:0px;
+  list-style:none;
+	-webkit-transition: all 1.3s cubic-bezier(0.7, 0.18, 0.15, 1);
+  	transition: all 1.3s cubic-bezier(0.7, 0.18, 0.15, 1);
+ }
+
+li {
+	right: 0;
+	top: 50px;
+}
+
+
+
 .texts{
 	z-index: 2;
 	top: 75%;
@@ -517,6 +543,25 @@ nav h3:hover , footer h3:hover{
  }
 
 .section-heading:hover{
+  -webkit-text-stroke: 1.2px #141414;
+	text-stroke: 1.2px #141414;
+  transition: all 0.5s cubic-bezier(0.7, 0.18, 0.15, 1);
+    color: rgb(0,0,0,0);
+	cursor: pointer;
+}
+
+.text-list {
+  right: 0;
+  font-size: 10rem;
+  line-height: 1;
+  font-weight:600;
+	-webkit-transition: all 1.3s cubic-bezier(0.7, 0.18, 0.15, 1);
+  	transition: all 1.3s cubic-bezier(0.7, 0.18, 0.15, 1);
+  -webkit-text-stroke: 1.2px #141414;
+  text-stroke: 1.2px #141414;
+ }
+
+.text-list:hover{
   -webkit-text-stroke: 1.2px #141414;
 	text-stroke: 1.2px #141414;
   transition: all 0.5s cubic-bezier(0.7, 0.18, 0.15, 1);
