--- a/css/style.css
+++ b/css/style.css
@@ -451,27 +451,50 @@ nav h3:hover , footer h3:hover{
 }
 
 .box-list{
-	z-index: 2;
+ 	z-index: 2;
 	position:absolute;
 	top: 60%;
 	margin: 0 auto;
-	width: 900px;
+	width: 1100px;
 	height: 100px;
-	overflow: hidden;
-}
+    overflow: hidden;
+  }
 
 #scroller{
-  top: 0px;
-  position:absolute;
-  right:0px;
-  list-style:none;
+     top: 0px;
+	right: 0px;
+	width: auto;
+    list-style:none;
 	-webkit-transition: all 1.3s cubic-bezier(0.7, 0.18, 0.15, 1);
   	transition: all 1.3s cubic-bezier(0.7, 0.18, 0.15, 1);
  }
 
 li {
+   right: 0px;
+   height: 130px;
+   top: 0px;
+
+}
+ 
+.text-list {
+	position: absolute;
+	display: block;
 	right: 0;
-	top: 50px;
+    font-size: 10rem;
+    line-height: 1;
+    font-weight:600;
+	-webkit-transition: all 1.3s cubic-bezier(0.7, 0.18, 0.15, 1);
+  	transition: all 1.3s cubic-bezier(0.7, 0.18, 0.15, 1);
+  -webkit-text-stroke: 1.2px #141414;
+  text-stroke: 1.2px #141414;
+ }
+
+.text-list:hover{
+  -webkit-text-stroke: 1.2px #141414;
+	text-stroke: 1.2px #141414;
+  transition: all 0.5s cubic-bezier(0.7, 0.18, 0.15, 1);
+    color: rgb(0,0,0,0);
+	cursor: pointer;
 }
 
 
@@ -543,25 +566,6 @@ li {
  }
 
 .section-heading:hover{
-  -webkit-text-stroke: 1.2px #141414;
-	text-stroke: 1.2px #141414;
-  transition: all 0.5s cubic-bezier(0.7, 0.18, 0.15, 1);
-    color: rgb(0,0,0,0);
-	cursor: pointer;
-}
-
-.text-list {
-  right: 0;
-  font-size: 10rem;
-  line-height: 1;
-  font-weight:600;
-	-webkit-transition: all 1.3s cubic-bezier(0.7, 0.18, 0.15, 1);
-  	transition: all 1.3s cubic-bezier(0.7, 0.18, 0.15, 1);
-  -webkit-text-stroke: 1.2px #141414;
-  text-stroke: 1.2px #141414;
- }
-
-.text-list:hover{
   -webkit-text-stroke: 1.2px #141414;
 	text-stroke: 1.2px #141414;
   transition: all 0.5s cubic-bezier(0.7, 0.18, 0.15, 1);
