--- a/css/style.css
+++ b/css/style.css
@@ -769,9 +769,28 @@ svg {
 /* 				CASE STUDIES				*/
 
 .case{
-	 overflow-y:scroll;
+	overflow-y:scroll;
+	position: fixed;
 	 width:100%;
 	 height: 100%;
+ 	top: 0;
+    right: 0;
+    left: 0;
+    transition: all .5s cubic-bezier(0.2, .84, .5, 1);
+    transform-origin:0 0;
+    transform: translate3d(0px, 0px, 0px);
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -ms-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-perspective: 1000;
+    -moz-perspective: 1000;
+    -ms-perspective: 1000;
+    perspective: 1000;
+  
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+	
 }
 
 .header{
@@ -786,6 +805,7 @@ svg {
 .margin{
 	margin-left: 5%;
 }
+
 
 .footer{
     background-color: black;
@@ -992,6 +1012,9 @@ header {
 
 /* 				ABOUT PAGE				*/
 
+.marginD{
+	margin-left: 25%;
+}
 
 .line-about{
 	margin-top: 10em;
@@ -1009,8 +1032,7 @@ header {
 }
 
 .photo{
-	margin: 0;
-	height: 100%;
+ 	height: 100%;
 	width: 40%;
 	position: fixed;
 	overflow: hidden;
@@ -1021,6 +1043,9 @@ header {
 
 .margen{
 	margin-top: 30%;
+ }
+.margenD{
+	margin-top: 15%;
  }
 .container-about{
  	width: 100%;
@@ -1038,6 +1063,15 @@ header {
 	text-stroke: 0.6px white;
     color: rgb(0,0,0,0);
 }
+
+.svg{
+	-webkit-animation:spin 12s linear infinite;
+    -moz-animation:spin 12s linear infinite;
+    animation:spin 12s linear infinite;
+}
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
 
 
 .animate-in {
