--- a/css/style.css
+++ b/css/style.css
@@ -1010,6 +1010,51 @@ header {
 	cursor: pointer;
 }
 
+/* 				LOAD PAGE				*/
+
+.preloader-wrap {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0; 
+  bottom: 0;
+  background: rgba(0,0,0,1);
+  z-index : 5; 
+  transition: top 0.6s cubic-bezier(.72,.16,.345,.875) !important;
+}
+
+.percentage {
+  z-index: 100;
+  text-align:center;
+  color: #fff;
+  line-height: 30px;
+  font-size : 15px;
+}
+
+.loader,
+.percentage{
+  height: 30px;
+  max-width: 500px; 
+  font-weight: 300;
+  position: absolute; 
+  top: 0; 
+  bottom: 0; 
+  left: 0; 
+  right: 0;
+  margin : auto; 
+}
+.loader:after,
+.percentage:after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+
 /* 				ABOUT PAGE				*/
 
 .marginD{
