--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ nav h3, footer h3{
 	opacity: 0.4;
     height: 50%;
 	-webkit-transition: all 0.5s ease;
-    color: white;
+    color: #fafafa;
 }
 
 
@@ -105,10 +105,10 @@ nav h3:hover , footer h3:hover{
   width: 100%;
   height: 100vh;
   overflow: hidden;
-/*  background: #e7e7e7;*/
-/*  background: #fafafa;*/
-  background: black;
-	z-index: 0;
+/*background: #e7e7e7;*/
+/*background: #fafafa;*/
+  background: rgb(13,13,13);
+  z-index: 0;
 }
 
 .case-main {
@@ -489,14 +489,14 @@ li {
   	transition: all 1.3s cubic-bezier(0.7, 0.18, 0.15, 1);
  /* -webkit-text-stroke: 1.2px #141414;
   text-stroke: 1.2px #141414;*/  
-    -webkit-text-stroke: 1.2px white;
-  text-stroke: 1.2px white;
-    color: white;
+    -webkit-text-stroke: 1.2px #fafafa;
+  text-stroke: 1.2px #fafafa;
+    color: #fafafa;
  }
 
 .text-list:hover{
-  -webkit-text-stroke: 1.2px white;
-  text-stroke: 1.2px white;
+  -webkit-text-stroke: 1.2px #fafafa;
+  text-stroke: 1.2px #fafafa;
   transition: all 0.5s cubic-bezier(0.7, 0.18, 0.15, 1);
     color: rgb(0,0,0,0);
 	cursor: pointer;
@@ -513,7 +513,7 @@ li {
 	height: 20px;
   	overflow: hidden;
   	width: 300px;
-    color: white;
+    color: #fafafa;
 }
 
 .linea{
@@ -524,7 +524,7 @@ li {
   width: 8%;
   right: 33%;
   height: 0.2vh;
-  background-color: white;
+  background-color: #fafafa;
   	-webkit-transition: all 0.6s cubic-bezier(0.7, 0.18, 0.15, 1);
    border: none; /*on supprime le style par défaut*/
 }
