--- a/css/style.css
+++ b/css/style.css
@@ -1061,9 +1061,9 @@ header {
   position: fixed;
   top: 0; 
   bottom: 0;
-  background: rgba(0,0,0,1);
+  background: rgba(13,13,13);
   z-index : 5; 
-  transition: top 0.6s cubic-bezier(.72,.16,.345,.875) !important;
+  transition: top 1s cubic-bezier(.86,0,.07,1) !important;
 }
 
 .percentage {
