--- a/css/style.css
+++ b/css/style.css
@@ -91,9 +91,11 @@ nav h3, footer h3{
 	opacity: 0.4;
     height: 50%;
 	-webkit-transition: all 0.5s ease;
-    color: #fafafa;
 }
 
+.black{
+	 color: rgb(13,13,13) !important;
+}
 
 nav h3:hover , footer h3:hover{
 	-webkit-transition: all 0.5s ease;
