--- a/css/style.css
+++ b/css/style.css
@@ -893,7 +893,7 @@ header {
 
 .description-begin{
 	height: auto;
-	font-size: 1vw;
+	font-size: 1.1vw;
  	vertical-align: top; 
 	line-height: 1.875;
 }
@@ -901,7 +901,7 @@ header {
 .description-about{
 	position: relative;
 	height: auto;
-	font-size: 0.7vw;
+	font-size: 0.9vw;
  	vertical-align: top; 
 	line-height:2.5;
 }
@@ -1122,6 +1122,36 @@ header {
 	font-weight:500;
 	color: #fafafa;
 	text-decoration: none;
+}
+
+a {
+  transition: all 0.8s;
+  position: relative;
+  text-decoration: none;
+}
+
+a:after {
+  transition: transform 0.8s cubic-bezier(0.19, 1, 0.22, 1), -webkit-transform 0.8s cubic-bezier(0.19, 1, 0.22, 1);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: #fafafa;
+  content: '';
+  -webkit-transform: scaleX(0);
+  -ms-transform: scaleX(0);
+  transform: scaleX(0);
+  transform-origin: bottom right;
+}
+a:hover {
+  transition: all 0.8s;
+}
+a:hover:after {
+  -webkit-transform-origin: bottom left;
+  -ms-transform-origin: bottom left;
+  transform-origin: bottom left;
+  transform: scaleX(1);
 }
 
 .about{
