--- a/css/style.css
+++ b/css/style.css
@@ -422,7 +422,7 @@ nav h3:hover , footer h3:hover{
   background-repeat: no-repeat;
   background-attachment: fixed;
   -webkit-transition: margin 1.3s cubic-bezier(.68,.01,.33,.99);
-  transition: margin 1.3s  cubic-bezier(.68,.01,.33,.99);
+  transition: all 1.3s  cubic-bezier(.68,.01,.33,.99);
   will-change: margin;
 }
 
@@ -457,7 +457,7 @@ nav h3:hover , footer h3:hover{
 .box-list{
  	z-index: 2;
 	position:absolute;
-	top: 60%;
+	top: 50%;
 	margin: 0 auto;
 	width: 75%;
 	height: 100px;
@@ -486,7 +486,8 @@ li {
 	right: 0;
     font-size: 10rem;
     line-height: 1;
-    font-weight:600;
+	font-family: 'Gentium Basic', serif;
+    font-weight:700;
 	-webkit-transition: all 1.3s cubic-bezier(0.7, 0.18, 0.15, 1);
   	transition: all 1.3s cubic-bezier(0.7, 0.18, 0.15, 1);
  /* -webkit-text-stroke: 1.2px #141414;
@@ -504,19 +505,13 @@ li {
 	cursor: pointer;
 }
 
-.text-list:hover .bg-part{
-   background-size: 50%;
-   background-position: 20% 50%;
-  -webkit-transition: all 1.3s cubic-bezier(.68,.01,.33,.99);
-}
-
 
 
 .texts{
 	z-index: 2;
 	top: 75%;
 	margin: 0 auto;
-	left: 70%;
+	left: 65%;
 	position:absolute;
 	height: 20px;
   	overflow: hidden;
@@ -530,7 +525,7 @@ li {
   top: 76.5%;
   opacity: 1;
   width: 8%;
-  right: 33%;
+  right: 38%;
   height: 0.2vh;
   background-color: #fafafa;
   	-webkit-transition: all 0.6s cubic-bezier(0.7, 0.18, 0.15, 1);
@@ -871,9 +866,11 @@ svg .animated-circle {
 }
 
 .case-title{
-   font-size:8vw;
-   font-weight:600;
-   line-height: 1.25;
+	font-family: 'Gentium Basic', serif;
+    font-weight:700;
+	letter-spacing: 5px;
+   font-size:6vw;
+    line-height: 1.25;
 	width: 100%;
 }
 
