--- a/css/style.css
+++ b/css/style.css
@@ -63,19 +63,17 @@ img{
 
 .logo img{
 	width: 20%;
+    margin-top:-10px;
 }
 
 .menu,.sidebar-hover{
     right: 0px;
 }
 
-.menu:first-child{
-	
+.logo:nth-child(2){
+	margin-left: 15%;
 }
 
-.foot,.sidebar-hover{
-    z-index: 2;
-}
 
 nav h3, footer h3{
 	-webkit-touch-callout: none; /* iOS Safari */
@@ -91,6 +89,14 @@ nav h3, footer h3{
 	opacity: 0.4;
     height: 50%;
 	-webkit-transition: all 0.5s ease;
+}
+
+.foot,.sidebar-hover{
+ 
+    z-index: 2;
+}
+footer .foot h3{
+  opacity:1 !important;
 }
 
 .black{
