--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,16 @@ html, body {
 	  overflow: hidden;
 }
 
+#noise {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 5;
+  opacity: 0.07;
+}
+
 
 nav{
 	z-index: 2;
