--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ html, body {
 #noise {
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 1;
