--- a/css/style.css
+++ b/css/style.css
@@ -25,11 +25,11 @@ html, body {
 #noise {
   width: 100%;
   height: 100%;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
-  z-index: 1;
-  opacity: 0.07;
+  z-index: 0;
+  opacity: 0.05;
 }
 
 
