--- a/css/style.css
+++ b/css/style.css
@@ -1194,11 +1194,11 @@ header {
 	margin-top: 7%;
 	margin-left: 6%;
  	height: 80%;
-	width: 28%;
+	width: 30%;
 	position: absolute;
 	overflow: hidden;
 	background-image: url(../imgs/foto3.png);
-	background-size: cover;
+	background-size: 110%;
 	background-position: 50% 90%;
 }
 
@@ -1206,7 +1206,6 @@ header {
 	margin-top: 30%;
  }
 .margenD{
-	margin-top: 15%;
  }
 .container-about{
  	width: 100%;
