--- a/css/style.css
+++ b/css/style.css
@@ -76,8 +76,10 @@ img{
 }
 
 .logo img{
-	width: 20%;
-    margin-top:10%;
+	position: fixed;
+	width: 4%;
+	z-index: 2;
+    margin-top:-2%;
 }
 
 .menu,.sidebar-hover{
