--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ html, body {
 nav{
 	z-index: 2;
 	width: 85%;
-	height: 70px;
+	height: 80px;
 	position: absolute;
 	left: 0;
 	right: 0;
@@ -46,7 +46,7 @@ nav{
 footer{
 	z-index: 2;
 	width: 85%;
-	height: 70px;
+	height: 80px;
 	position: absolute;
 	bottom: 0;
 	left: 0;
@@ -77,7 +77,7 @@ img{
 
 .logo img{
 	position: fixed;
-	width: 4%;
+	width: 3%;
 	z-index: 2;
     margin-top:-2%;
 }
@@ -1205,7 +1205,7 @@ header {
 	position: absolute;
 	overflow: hidden;
 	background-image: url(../imgs/foto3.png);
-	background-size: 110%;
+	background-size: 100%;
 	background-position: 50% 90%;
 }
 
@@ -1213,6 +1213,7 @@ header {
 	margin-top: 30%;
  }
 .margenD{
+    margin-top: 10%;
  }
 .container-about{
  	width: 100%;
