--- a/css/style.css
+++ b/css/style.css
@@ -887,11 +887,12 @@ svg .animated-circle {
 
 
 .footer{
-    background-color: black;
+    background-color: #141414;
     width: 100%;
-	height: 60%;
     color: white;
-	position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .white{
@@ -918,7 +919,7 @@ header {
     top: 0;
     transition: top 0.6s cubic-bezier(.72,.16,.345,.875) !important;
     width: 100%;
-	background-color: #fafafa
+	background-color: #fafafa;
  }
 
 .description-begin{
@@ -960,6 +961,7 @@ header {
   text-transform: uppercase;
   display: inline-block;
 }
+
 
 .textcont{
   margin-top: 6%;	
@@ -1079,9 +1081,35 @@ header {
 }
 
 .footer .container{
-	width: 10%;
-	
+    display: inline-block;
+	width: 80%;
+    height: auto;
+    align-self: center; 
 }
+
+
+.next-case{
+   text-align: center;
+    
+   font-size:0.8vw;
+   font-weight:700;
+   letter-spacing: 2.5px;
+   text-transform: uppercase;
+ }
+
+.next-title{
+    padding: 5% 5%;
+     text-align: center;
+	font-family: 'Gentium Basic', serif;
+    font-weight:700;
+	letter-spacing: 5px;
+    font-size:6vw;
+    -webkit-text-stroke: 1.2px white;
+	text-stroke: 1.2px white;
+    	 -webkit-transition: all 0.3s ease;
+
+  }
+
 
 .next, .title{
 	position: absolute;
@@ -1096,7 +1124,7 @@ header {
 }
 
 
-.next:hover {
+.next-title:hover {
   -webkit-text-stroke: 1.2px white;
 	text-stroke: 1.2px white;
 	 -webkit-transition: all 0.3s ease;
