--- a/css/style.css
+++ b/css/style.css
@@ -850,26 +850,15 @@ svg .animated-circle {
 .case{
 	overflow-y:scroll;
 	position: fixed;
-	 width:100%;
-	 height: 100%;
+	width:100%;
+	height: 100%;
+		background-color: #fafafa;
  	top: 0;
     right: 0;
-    left: 0;
-    transition: all .5s cubic-bezier(0.2, .84, .5, 1);
-    transform-origin:0 0;
-    transform: translate3d(0px, 0px, 0px);
-    -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    -ms-backface-visibility: hidden;
-    backface-visibility: hidden;
-    -webkit-perspective: 1000;
-    -moz-perspective: 1000;
-    -ms-perspective: 1000;
-    perspective: 1000;
-  
+    left: 0;		
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-	
+	padding-bottom: 35%;
 }
 
 .header{
@@ -885,15 +874,6 @@ svg .animated-circle {
 	margin-left: 5%;
 }
 
-
-.footer{
-    background-color: #141414;
-    width: 100%;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
 .white{
 	color: white;
@@ -1078,6 +1058,26 @@ header {
 .hov:hover img{
 	transform: matrix(1.05, 0, 0, 1.05, 0, 0);
 	transition: all .5s cubic-bezier(.72,.16,.345,.875)!important;
+}
+
+.wrap{
+		overflow-y:scroll;
+ 	position: relative;
+	z-index: 2;
+	background-color: #fafafa;
+}
+
+.footer{
+	position: fixed;
+     background-color: #141414;
+    width: 100%;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ 	z-index: 1;
+	left: 0;
+	bottom: 0;
 }
 
 .footer .container{
