--- a/css/style.css
+++ b/css/style.css
@@ -852,13 +852,16 @@ svg .animated-circle {
 	position: fixed;
 	width:100%;
 	height: 100%;
-		background-color: #fafafa;
  	top: 0;
     right: 0;
     left: 0;		
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
 	padding-bottom: 35%;
+}
+.case-main .case {
+    	background-color: #fafafa;
+
 }
 
 .header{
@@ -1061,7 +1064,7 @@ header {
 }
 
 .wrap{
-		overflow-y:scroll;
+    overflow-y:scroll;
  	position: relative;
 	z-index: 2;
 	background-color: #fafafa;
@@ -1179,6 +1182,19 @@ header {
 
 /* 				ABOUT PAGE				*/
 
+.about-case{
+	overflow-y:scroll;
+	position: fixed;
+    z-index: 1;
+	width:100%;
+	height: 100%;
+  	top: 0;
+    right: 0;
+    left: 0;		
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 .marginD{
 	margin-left: 25%;
 }
@@ -1226,11 +1242,13 @@ header {
 }
 
 .about{
+      position: relative;
+    z-index: 2;
 	margin-left: 50%;
 }
 
 .photo{
-	margin-top: 7%;
+ 	margin-top: 7%;
 	margin-left: 6%;
  	height: 80%;
 	width: 30%;
@@ -1248,6 +1266,8 @@ header {
     margin-top: 10%;
  }
 .container-about{
+    position: absolute;
+    z-index: 2;
  	width: 100%;
  	display: inline-block;
  }
